--- a/Ball game.csproj
+++ b/Ball game.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Assets\Scripts\Player1Score.cs" />
     <Compile Include="Assets\Scripts\Player2Paddle.cs" />
     <Compile Include="Assets\Scripts\Player2Score.cs" />
+    <Compile Include="Assets\Scripts\TestCode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
