--- a/Ball game.csproj
+++ b/Ball game.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Assets\Scripts\Scores\P2ScoreLvl2.cs" />
     <Compile Include="Assets\Scripts\Scores\P2ScoreLvl3.cs" />
     <Compile Include="Assets\Scripts\TestCode.cs" />
+    <Compile Include="Assets\Scripts\WallMovment.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
